--- a/style.css
+++ b/style.css
@@ -22,15 +22,18 @@ html,
 body {
     width: 100%;
     height: 100%;
-    /* para retirar o tamanho do scroll que soma e desloca os elementos quando ele é adivado/desativado */
-    /* overflow: overlay; */
+   
 
-    background-color: var(--brand-light);
+    
 }
 body {
     font-family: "DM Sans";
     font-size: 1.6rem; /* agora vale 16px */
     text-align: center;
+    overflow:overlay;
+    background-color: var(--bg-light); 
+    /* para retirar o tamanho do scroll que soma e desloca os elementos quando ele é adivado/desativado */
+    overflow: overlay;
 }
 .wrapper {
     width: 37.5rem;
@@ -39,6 +42,8 @@ body {
     padding-inline: 2.4rem;
     
 }
+
+
 
 ul {
     list-style: none;
@@ -56,13 +61,15 @@ header {
 }
 
 header::before {
-    content: "";
+    content: " ";
     /* nos 100vw ele conta a barrinha de rolamento, trocar por 100% */
     width: 100%;
     /* somar as alturas para se precisar alteral alguma delas, todas respeitam o posicionamento*/
-    height: calc(108rem + var(--nav-height));
+    /* height: calc(108rem + var(--nav-height)); */
+    height:115.2rem;
     background-color: var(--brand-light);
     display: block;
+
     position: absolute;
     top: 0;
     left: 0;
@@ -259,7 +266,7 @@ body.menu-expended nav {
     color: var(--prymary-color);
 
     display: inline-block;
-    padding: 16px 32px;
+    padding: 1.6rem 3.2rem;
 
     margin-top: 4.8rem;
     margin-bottom: 8rem;
