--- a/style.css
+++ b/style.css
@@ -18,20 +18,22 @@
 
     --nav-height: 7.2rem;
 }
+html {
+    /* Para rolamento suave */
+    scroll-behavior: smooth;
+}
+
 html,
 body {
     width: 100%;
     height: 100%;
-   
-
-    
 }
 body {
     font-family: "DM Sans";
     font-size: 1.6rem; /* agora vale 16px */
     text-align: center;
-    overflow:overlay;
-    background-color: var(--bg-light); 
+    overflow: overlay;
+    background-color: var(--bg-light);
     /* para retirar o tamanho do scroll que soma e desloca os elementos quando ele é adivado/desativado */
     overflow: overlay;
 }
@@ -40,10 +42,7 @@ body {
     margin-inline: auto;
     /* para todos seguirem o mesmo padding da lateral */
     padding-inline: 2.4rem;
-    
 }
-
-
 
 ul {
     list-style: none;
@@ -53,20 +52,20 @@ section {
     padding-block: 10rem;
 }
 
-/* =============HEADER=========== */
-header {
+/* =============HOME=========== */
+#home {
     /* propriedade de cálculo para somar marging top do Header com a altura do Nav
     margin-top: 4.1rem; */
-    margin-top: calc(4.1rem + var(--nav-height));
+    padding-top: calc(4.1rem + var(--nav-height));
 }
 
-header::before {
+#home::before {
     content: " ";
     /* nos 100vw ele conta a barrinha de rolamento, trocar por 100% */
     width: 100%;
     /* somar as alturas para se precisar alteral alguma delas, todas respeitam o posicionamento*/
     /* height: calc(108rem + var(--nav-height)); */
-    height:115.2rem;
+    height: 115.2rem;
     background-color: var(--brand-light);
     display: block;
 
@@ -76,25 +75,25 @@ header::before {
     z-index: -1;
 }
 
-header h4 {
+#home h4 {
     font-size: 1.4rem; /*agora vale 14px*/
     color: var(--prymary-color);
 }
 
-header h1 {
+#home h1 {
     font-size: 3.4rem;
     color: var(--headline);
     line-height: 130%;
     margin-bottom: 2.4rem;
 }
-header p {
+#home p {
     font-size: 1.8rem;
     line-height: 150%;
     color: var(--paragraph);
     margin-bottom: 3.2rem;
 }
 
-header button {
+#home button {
     background: var(--prymary-color);
     border: none;
     border-radius: 4rem;
@@ -115,7 +114,7 @@ header button {
     margin-right: auto;
     margin-left: auto;
 }
-header img {
+#home img {
     width: 26.4rem;
 
     display: block;
@@ -124,7 +123,7 @@ header img {
     object-position: 0 2rem;
 }
 
-.stats {
+#home .stats {
     width: 32.7rem;
     /* padding-top: 4rem;
     padding-bottom: 4rem; */
@@ -142,7 +141,7 @@ header img {
     gap: 6rem;
 }
 
-.stat h3 {
+#home .stat h3 {
     font-size: 4.8rem;
     color: var(--headline);
     line-height: 130%;
@@ -150,7 +149,7 @@ header img {
     margin-bottom: 0.4rem;
 }
 
-.stat p {
+#home .stat p {
     margin: 0;
     color: var(--prymary-color);
     font-size: 1.6rem;
@@ -220,6 +219,11 @@ body.menu-expended .close-menu {
     visibility: visible;
 }
 
+.menu {
+    /* transiçãp do menu */
+    transform: translateY(100%);
+}
+
 body.menu-expended .menu {
     position: fixed;
     top: 0;
@@ -230,6 +234,10 @@ body.menu-expended .menu {
     height: 100vh;
 
     padding-top: var(--nav-height);
+
+    /* transição do menu */
+    transition: transform 300ms;
+    transform: translateY(0);
 }
 body.menu-expended nav {
     position: relative;
